@@ -4,6 +4,8 @@ Next
         [FIXES]
         * Fixed test failures because of Google changes.  Thanks to
           Offer Kaye and others who sent in patches.
+        * Updated Google-based tests since Google changed the pages out
+          from under us, gosh darn it.
 
         [DOCUMENTATION]
         * More samples in the FAQ.  Thanks to Joshua Gatcomb.
